static/css/s2.css
/* ... */
.textListTextRangeBox .textRange{
  margin-bottom: 0;
  padding-bottom: 0;
}
.textListTextRangeBox .connection-buttons, .versionsTextList .connection-buttons{
  margin-bottom: 28px;
  display: flex;
  align-items: center;
  align-content: flex-start;
}
.connection-buttons.access-user .connection-button.delete-link{
  display:none;
}
.connection-buttons .connection-button{
  font-style: normal;
  font-weight: normal;
  font-size: 13px;
  line-height: 15px;
  color: #999999;
  margin-inline-end: 15px;
  text-decoration: none;
  cursor: pointer;
}
.singlePanel .connection-buttons .connection-button{
  text-align: start;
  margin-inline-end: 5px;
}
.connection-buttons .connection-button .int-en{
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.connection-buttons .connection-button .int-he{
  font-family: "Heebo", "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.toolsMessage {
  margin: 130px 0;
  text-align: center;
  font-size: 18px;
}
.connection-buttons .connection-button::before{
  line-height: 25px;
  color: #999999;
  vertical-align: middle;
  opacity: 0.4;
  transform: scale(0.55);
  display: inline-block;
}
.connection-buttons .panel-open-link::before{
  content: url("/static/icons/open-panel.svg");
}
.connection-buttons .delete-link::before{
  content: url("/static/icons/remove-connection.svg");
}
.connection-buttons .add-to-sheet-link::before{
  content: url("/static/icons/add-to-sheet.svg");
}
.toolsButton {
  display: flex;
  justify-content: flex-start;
  color: #000;
  /*border-top: 1px solid #E5E5E5;*/
  cursor: pointer;
  font-size: 16px;
  letter-spacing: 1px;
  margin: 20px 34px;
  align-items: center;
}
.toolsButton .toolsButtonText .connectionsCount::before{
  content: " ";
}
.topicList.topicsHe {
  direction: rtl;
}
.topicList.topicsEn {
  direction: ltr;
}
.interface-hebrew .topicList.topicsEn {
  direction: rtl;
}
.toolsButton.topicButton {
  flex-direction: column;
  letter-spacing: unset;
  align-items: initial;
  border-top: 1px solid #E5E5E5;
  padding: 20px 34px;
  margin: initial;
}
.topicButton .topicButtonTitle {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-align: left;
}
.topicButton .topicButtonTitle .he {
  text-align: right;
}
.topicButton .contentText .en {
  font-family: "adobe-garamond-pro", "Crimson Text", Georgia, serif;
}
.topicButtonTitle .he {
  font-size: 122%;
}
.topicButton .three-dots-button.tooltip-toggle::before,
.named-entity-title-bar .three-dots-button.tooltip-toggle::before {
  transform: none;
  left: unset;
  right: 30px;
  width: 180px;
}
.readerPanel.hebrew .topicButton .three-dots-button.tooltip-toggle::before,
.readerPanel.hebrew .named-entity-title-bar .three-dots-button.tooltip-toggle::before {
  right: unset;
  left: 30px;
  text-align: right;
}
.topicButton .smallText {
  margin-top: 10px;
  line-height: 18px;
  font-size: 18px;
  text-align: start;
}
.topicButton .smallText .en {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  font-size: 13px;
  font-weight: normal;
  color: #999;
}
.topicButton .smallText .he {
  font-family: "Heebo", sans-serif;
  font-size: 13px;
  font-weight: normal;
  color: #999;
}
.toolsButton:hover {
  text-decoration: none;
  color: inherit;
}
.toolsButton.systemTypeface .toolsButtonText span.int-en,
.toolsButton.systemTypeface .toolsButtonText span.en{
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.toolsButton.textTypeface .toolsButtonText span.int-en,
.toolsButton.textTypeface .toolsButtonText span.en{
  font-family: "adobe-garamond-pro", "Crimson Text", Georgia, serif;
}
.toolsButton.systemTypeface .toolsButtonText span.int-he,
.toolsButton.systemTypeface .toolsButtonText span.he{
  font-family: "Heebo", "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.toolsButton.textTypeface .toolsButtonText span.int-he,
.toolsButton.textTypeface .toolsButtonText span.he{
  font-family: "Taamey Frank", "adobe-garamond-pro", "Crimson Text", Georgia, "Times New Roman", serif;
  font-size: 122%;
}
.toolsButton .toolsButtonIcon {
  color: #999;
  font-size: 20px;
  margin-top: -1px;
}
.interface-hebrew .toolsButton .toolsButtonIcon {
  margin-top: 1px;
}
.toolsButton img.toolsButtonIcon {
  width: 18px;
  height: 18px;
  vertical-align: middle;
}
.toolsButton .toolsButtonText{
  margin-inline-start: 15px;
}
.shareInputBox {
  padding: 34px;
}
.shareInput {
  width: 100%;
  box-sizing: border-box;
  border-radius: 7px;
  border: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
  font-size: 18px;
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  color: #666;
  padding: 20px 26px;
}
.addToSourceSheetBox {
  position: relative;
}
.addToSourceSheetBox input {
  padding: 13px 12px;
  margin: 0;
  cursor: pointer;
  font-size: 18px;
  border-radius: 4px;
  box-shadow: none;
  border: 1px solid #E9E9E9;
  width: 60%;
  height: 50px;
  box-sizing: border-box;
}
.addToSourceSheetBox .button {
  width: 100%;
  text-align: center;
  margin: 0;
}
.addToSourceSheetBox .button.small {
  width: 37%;
  box-sizing: border-box;
  height: 50px;
  padding: 17px;
  margin: 0;
  float: right;
}
.interface-hebrew .addToSourceSheetBox input {
  width: 47%;
}
.interface-hebrew .addToSourceSheetBox .button.small {
  width: 50%;
  float: left;
}
.addToSourceSheetBox .newSheet {
  border-top: 1px solid #E9E9E9;
  padding: 14px 22px;
}
.addToSourceSheetBox .newSheet input::placeholder { /* eventual spec? */
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.addToSourceSheetBox .newSheet input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.addToSourceSheetBox .newSheet input::-moz-placeholder { /* Firefox 19+ */
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
/* ... */

